[package]
name = "mfsr"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Filipe dos Santos Reinert"]


[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
fuser = "0.14.0"
libc = "0.2.149"
bincode = "1.3.3"
serde = {version = "1.0.192", features = ["derive"]}
anyhow = "1.0.75"
crc32fast = "1.3.2"
memmap2 = "0.9.0"
libparted = "0.1.5"
nix = {version = "0.27.1", features = ["mman"]}
